# blobcache

./: .env.template  .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  LOGGING.md  README.md  TESTING.md  cache-design.md  clippy.toml  cold-read.md  opus_code_eval_actions.md
.github/workflows/: build.yml  ci.yml  container.yml  os-train-image.yml
bench/: analyze-azcp.py  analyze.py  azcp-matrix.sh  matrix.sh  sweep_concurrency.out  sweep_concurrency.sh  sweep_v2.out  sweep_v2.sh  sweep_workers.out  sweep_workers.sh  sweep_workers_n1.out  sweep_workers_n1.sh  sweep_workers_w8.out
bench/deploy-configs/: blobcached-4tm52.toml  blobcached-58j5w.toml  blobcached-72brv.toml  blobcached-79k4t.toml  blobcached-79qtw.toml  blobcached-cjxlm.toml  blobcached-gkpn5.toml  blobcached-jtd5g.toml  blobcached-k2qt8.toml  blobcached-lqfbj.toml  blobcached-mnss7.toml  blobcached-pmqbq.toml  blobcached-pnkbb.toml  blobcached-vvh5j.toml  blobcached-wnr5z.toml  blobcached-zghwq.toml
bench/results-pool512-chunk4M/: SUMMARY.txt
bench/results-v2.7.1-pre-pool-tuning/: SUMMARY.txt
benchmarks/: RESULTS-2026-04-28.md  RESULTS-2026-04-29-cache-off.md  RESULTS-2026-04-29-phase-a-only.md  RESULTS-2026-04-29-ring.md  RESULTS-2026-04-30-fix-bloom-stale-revalidation.md  RESULTS-2026-04-30-mainrt-bound.md  RESULTS-2026-04-30-peer-yes-wait-ms.md  RESULTS-2026-04-30-shardlru.md  RESULTS-2026-04-30-tier1-baseline-6run-sweep.md  RESULTS-2026-05-01-perf-singleflight-dashmap.md  RESULTS-2026-05-01-tier2-startupprobe-sweep.md  RESULTS-2026-05-02-pass3-node-replacement.md  RESULTS-2026-05-02-pass3-sweep.md  bench.sh  cold-read.sh  diag-run.sh  diag-straggler.sh  diag-summary.sh  e2e-hydrate-read.sh  results-e2e-2026-04-28-hydrate.json  results-e2e-2026-04-28-pass1.tsv  results-e2e-2026-04-28-pass2.tsv  results-e2e-2026-04-28-r2-prefetch0-hydrate.json  results-e2e-2026-04-28-r2-prefetch0-pass1.tsv  results-e2e-2026-04-28-r2-prefetch0-pass2.tsv  results-e2e-2026-04-28-r3-single-wiped.txt  results-e2e-2026-04-28-r4-chunk4M-hydrate.json  results-e2e-2026-04-28-r4-chunk4M-pass1.tsv  results-e2e-2026-04-28-r4-chunk4M-pass2.tsv  results-e2e-2026-04-28-r5-chunk4M-repeat-hydrate.json  results-e2e-2026-04-28-r5-chunk4M-repeat-pass1.tsv  results-e2e-2026-04-28-r5-chunk4M-repeat-pass2.tsv  results-e2e-2026-04-28-r6-tcp-hydrate.json  results-e2e-2026-04-28-r6-tcp-pass1.tsv  results-e2e-2026-04-28-r6-tcp-pass2.tsv  results-rdma-real.tsv  results-rdma.tsv  results-v22.tsv  results-v231-rerun.tsv  results-v231.tsv  (+6 more)
benchmarks/results/: 2026-05-02-pass3-node-replacement-pass1.tsv  2026-05-02-pass3-node-replacement-pass2.tsv  2026-05-02-pass3-node-replacement-pass3.tsv  run7-origin-only-pass1.tsv  run7-origin-only-pass2.tsv  run8-no-stampede-pass1.tsv  run8-no-stampede-pass2.tsv  sweep-perf-singleflight-dashmap-summary.tsv
benchmarks/sweep/: README.md  render-overlay.sh  run-6run-sweep.sh  values-cache-peer-off.yaml.tmpl  values-cache-peer-on.yaml.tmpl
deploy/: Dockerfile  blobcached.yaml  storage-access.sh  wipe-caches.sh
docs/: E2E-RESULTS.md  INTEGRATION_PLAN.md  UCC_INTEGRATION.md  config.md  slurm.md
examples/: blobcached-azcluster.toml  blobcached.toml
src/: azure.rs  blob_fetcher_pool.rs  cache.rs  clear.rs  cluster.rs  config.rs  error.rs  fetcher.rs  fuse_fs.rs  http_util.rs  hydrate.rs  hydrate_jobs.rs  lib.rs  main.rs  nic.rs  peerindex.rs  request_id.rs  stats.rs  transport.rs  transport_ucc.rs  transport_ucx.rs  ucc_oob.rs
tests/: auth.rs  bloom.rs  chunk_key.rs  config.rs  disk_cache.rs  peer_index.rs  shared_key.rs  transport_tcp.rs  two_daemon.rs
(+615 files in other folders)
